# karton-file-detection

./: Dockerfile  README.md  pyproject.toml
src/: __init__.py  __main__.py  __version__.py  file_detection.py
